# strawberry-jam

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: bike.glb  island.glb
assets/exports/: A.glb  B.glb  C.glb  D.glb  E.glb  F.glb  data.json
src/: main.rs  water.rs
src/fps/: mod.rs
src/world/: deserialize.rs  exports.rs  markov.rs  mod.rs
wip/: bike.blend  obb.blend  process_meshes.py
