[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features = ["file_watcher"] } # "dynamic_linking"
bevy_fps_controller = "0.3.0"
bevy_panorbit_camera = "0.19.1"
bevy_rapier3d = { version = "0.27.0", features = ["wasm-bindgen", "debug-render-3d"] }
bevy_common_assets = { version = "0.11.0", features = ["json"]}
serde = { version = "1" }
rand = "0.8.5"


